[gd_scene load_steps=5 format=3 uid="uid://dhjng8ua3ey2e"]

[ext_resource type="Script" path="res://hud.gd" id="1_06rxo"]
[ext_resource type="Texture2D" uid="uid://cfwwhjedvb1hl" path="res://Assets/00018-1916806579.png" id="2_gt7mw"]
[ext_resource type="FontFile" uid="uid://b8sl1jrresn15" path="res://Assets/shlop/shlop rg.otf" id="3_0yjd6"]
[ext_resource type="Texture2D" uid="uid://d0juf41c8woxk" path="res://Assets/Kyrise's 16x16 RPG Icon Pack - V1.2/icons/16x16/pearl_01c.png" id="4_8rpac"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_06rxo")

[node name="HealthLabel" type="Label" parent="."]
offset_right = 56.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Health:"

[node name="HealthOrb1" type="Sprite2D" parent="."]
position = Vector2(72, 16)
texture = ExtResource("4_8rpac")

[node name="HealthOrb2" type="Sprite2D" parent="."]
position = Vector2(96, 16)
texture = ExtResource("4_8rpac")

[node name="HealthOrb3" type="Sprite2D" parent="."]
position = Vector2(120, 16)
texture = ExtResource("4_8rpac")

[node name="IntroImage" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_gt7mw")

[node name="Game_title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Rudolf's Revenge"
horizontal_alignment = 1

[node name="IntroText" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.0
offset_top = 296.0
offset_right = 242.0
offset_bottom = 437.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0yjd6")
theme_override_font_sizes/font_size = 50
text = "Santa ate my father
He must die!"
horizontal_alignment = 1

[node name="Game_over" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -147.5
offset_right = 60.5
offset_bottom = -124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0yjd6")
theme_override_font_sizes/font_size = 60
text = "Game over"
horizontal_alignment = 1

[node name="Start_Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.5
offset_top = -97.0
offset_right = 46.5
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
text = "Start game"

[node name="Restart_Button" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.5
offset_top = -93.0
offset_right = 46.5
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="Victory" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -41.5
offset_right = 283.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Christmas is saved?"

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Restart_Button" to="." method="_on_restart_button_pressed"]
